--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ header {
   left: 0;
   width: 100%;
   height: 50px;
-  background-color: #ffffffb1;
+  background-color: #ffffff;
   backdrop-filter: blur(20px);
   display: flex;
   align-items: center;
@@ -994,9 +994,9 @@ body.dark ::-webkit-scrollbar-thumb:hover {
 .text-tab3 p{
   margin: 16px 0 10px;
   font-family: 'Khala Battambang', sans-serif;
-  font-size: 28px;
+  font-size: 24px;
   text-align: center;
-  color: #636363;
+  color: #8e8e8e;
 }
 @media (max-width: 480px){
   .text-tab3 p{
